stopped other elements clipping through navbar

--- a/style/main.css
+++ b/style/main.css
@@ -52,6 +52,7 @@ body{
 /* navbar */
 #mainnav{
 	position:sticky;
+	z-index:100;
 	top:0;
 	left:0;
 	width:calc(100vw - 4em);
